<resources>
    <string name="app_name">Income Tracker</string>
    <string name="widget_name">Income Tracker</string>

    <string name="portfolio_header">Portfolios</string>

    <!-- buttons -->
    <string name="portfolio_add_button">Add Portfolio</string>
    <string name="stock_search_button">Search Stock</string>

    <!-- stock holding list -->
    <string name="stock_holding_add">Add Position</string>

    <!-- portfolio saving -->
    <string name="portfolio_name">Name</string>
    <string name="portfolio_goal">Goal</string>
    <string name="portfolio_description">Description</string>
    <string name="portfolio_name_hint">The name that will display in the list</string>
    <string name="portfolio_goal_hint">What the goal is (aggressive, moderate, etc)</string>
    <string name="portfolio_description_hint">Brief description (limit 25 chars)</string>

    <!-- stock holding saving -->
    <string name="stock_holding_symbol_label">Symbol</string>
    <string name="stock_information_label">Stock Information</string>
    <string name="stock_holding_symbol_hint">The symbol of the stock to search for</string>
    <string name="stock_holding_name_label">Description</string>
    <string name="stock_holding_number_of_shares_label">Number of Shares</string>
    <string name="stock_holding_number_of_shares_hint">The number of shares of stock bought</string>
    <string name="stock_holding_price_bought_label">Cost</string>
    <string name="stock_holding_price_bought_hint">The cost basis of the stock</string>
    <string name="stock_holding_current_price_label">Current Price</string>
    <string name="stock_holding_dividend_label">Dividend</string>
    <string name="stock_holding_gain_label">Gain/Loss</string>
    <string name="stock_holding_yield_label">Yield</string>

    <!-- stock description table -->
    <string name="stock_symbol_label">Symbol</string>
    <string name="stock_name_label">Name</string>
    <string name="stock_industry_label">Industry</string>
    <string name="stock_issue_type_label">Issue Type</string>
    <string name="stock_price_label">Price</string>
    <string name="stock_dividend_label">Dividend</string>
    <string name="stock_yield_label">Yield</string>

    <!-- activity titles -->
    <string name="title_activity_portfolio_saving">Update Portfolio</string>
    <string name="title_activity_portfolio_new">New Portfolio</string>
    <string name="title_activity_main">Portfolios</string>
    <string name="title_activity_stock_holdings">Portfolio Holdings</string>
    <string name="title_activity_stock_holding_new">New Stock Holding</string>
    <string name="title_activity_stock_holding_update">Update Stock Holding</string>

    <!-- stock holding list table -->
    <string name="stock_holding_list_shares_label"># Shares</string>
    <string name="stock_holding_list_symbol_label">Symbol</string>
    <string name="stock_holding_list_cost_basis_label">Cost Basis</string>
    <string name="stock_holding_list_current_value_label">Sum Value</string>
    <string name="stock_holding_list_dividend_label">Dividend</string>
    <string name="stock_holding_list_total_label">Totals</string>

    <!-- portfolio list table -->
    <string name="portfolio_list_name_label">Name</string>
    <string name="portfolio_list_value_label">Value</string>
    <string name="portfolio_list_gain_label">Gain/Loss</string>
    <string name="portfolio_list_dividend_label">Dividend</string>

    <!-- headers -->
    <string name="industry_sector_header">% Diversification by Industry</string>
    <string name="portfolio_list_header">Portfolio List</string>

    <!-- snippets -->
    <string name="portfolio_snippet">Portfolio:\u0020</string>

    <!-- constants for display of industry -->
    <string name="diversification_chart_label">Diversification by Value</string>

    <!-- messages and values -->
    <string name="multiple_industry_value">Multiple</string>
    <string name="no_network_error">Network unavailable, please check reception</string>
    <string name="not_found_stock_symbol_error">The stock symbol is not valid; please check the symbol</string>
    <string name="empty_stock_symbol_error">The symbol to search cannot be empty</string>

    <!-- toast messages -->
    <string name="adding_portfolio_toast">Adding portfolio\u0020</string>
    <string name="adding_stock_holding_toast">Adding stock holding of\u0020</string>

    <!-- widget string -->
    <string name="widget_title">Income Portfolio Totals</string>
    <string name="widget_value_label">Current value</string>
    <string name="widget_dividend_label">Yearly dividends</string>
    <string name="widget_gain_label">Total gains</string>
    <string name="widget_update_button">Update</string>

    <!-- accessibility labels -->
    <string name="accessibility_delete_portfolio_button_label">Delete portfolio</string>
    <string name="accessibility_edit_portfolio_button_label">Edit portfolio</string>
    <string name="accessibility_refresh_portfolio_button_label">Refresh portfolio</string>
    <string name="accessibility_refresh_all_portfolio_button_label">Refresh all portfolios</string>
    <string name="accessibility_add_portfolio_button_label">Add portfolio</string>
    <string name="accessibility_add_stock_holding_button_label">Add stock holding</string>
    <string name="accessibility_save_portfolio_button_label">Save portfolio</string>
    <string name="accessibility_save_stock_holding_button_label">Save stock holding</string>
    <string name="accessibility_delete_stock_holding_button_label">Delete stock holding</string>
    <string name="accessibility_search_stock_symbol_button_label">Search stock symbol</string>


</resources>
