<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.doobs.invest.income.PortfolioSavingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:elevation="@dimen/toolbar_elevation"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/portfolio_name_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portfolio_name"
                    style="@style/labelView" />

                <EditText
                    android:id="@+id/portfolio_name_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/portfolio_name_hint"
                    style="@style/editViewNoMargin"/>

                <TextView
                    android:id="@+id/portfolio_description_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portfolio_description"
                    style="@style/labelView" />

                <EditText
                    android:id="@+id/portfolio_descriprion_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/portfolio_description_hint"
                    style="@style/editViewNoMargin"/>

                <TextView
                    android:id="@+id/portfolio_goal_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portfolio_goal"
                    style="@style/labelView" />

                <EditText
                    android:id="@+id/portfolio_goal_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/portfolio_goal_hint"
                    style="@style/editViewNoMargin"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/portfolio_deleting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/accessibility_delete_portfolio_button_label"
        android:src="@drawable/ic_delete_forever_black_24dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_invisible"
        android:layout_width="@dimen/fab_margin"
        android:layout_height="@dimen/fab_margin"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="invisible"
        app:layout_anchor="@id/portfolio_deleting_fab"
        app:layout_anchorGravity="top" />

    <!-- top FAB -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/portfolio_saving_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_black_24dp"
        android:background="@color/doobsAccent"
        app:layout_anchor="@id/fab_invisible"
        android:contentDescription="@string/accessibility_save_portfolio_button_label"
        app:layout_anchorGravity="top" />

</android.support.design.widget.CoordinatorLayout>
