<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.doobs.invest.income.PortfolioSavingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:elevation="@dimen/toolbar_elevation"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/stock_holding_symbol_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_holding_symbol_label"
                    style="@style/labelView" />

                <EditText
                    android:id="@+id/stock_holding_symbol_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stock_holding_symbol_hint"
                    style="@style/editViewNoMargin"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/symbol_search_button"
                    android:background="@color/doobsAccent"
                    android:contentDescription="@string/accessibility_search_stock_symbol_button_label"
                    android:text="@string/stock_search_button"/>

                <!-- start - display of search stock results -->
                <TextView
                    android:id="@+id/stock_informtaion_label_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stock_information_label"
                    style="@style/labelView" />

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/stock_symbol_label_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="@dimen/table_layout_stock_label_width"
                            android:text="@string/stock_symbol_label"
                            style="@style/labelViewSmall"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/stock_symbol_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/textViewSmall"
                            android:layout_column="2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/stock_name_label_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="@dimen/table_layout_stock_label_width"
                            android:text="@string/stock_name_label"
                            style="@style/labelViewSmall"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/stock_name_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/textViewSmall"
                            android:layout_column="2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/stock_industry_label_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="@dimen/table_layout_stock_label_width"
                            android:text="@string/stock_industry_label"
                            style="@style/labelViewSmall"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/stock_industry_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/textViewSmall"
                            android:layout_column="2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/stock_issue_type_label_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="@dimen/table_layout_stock_label_width"
                            android:text="@string/stock_issue_type_label"
                            style="@style/labelViewSmall"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/stock_issue_type_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/textViewSmall"
                            android:layout_column="2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/stock_price_label_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="@dimen/table_layout_stock_label_width"
                            android:text="@string/stock_price_label"
                            style="@style/labelViewSmall"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/stock_price_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/textViewSmall"
                            android:layout_column="2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/stock_yield_label_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="@dimen/table_layout_stock_label_width"
                            android:text="@string/stock_yield_label"
                            style="@style/labelViewSmall"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/stock_yield_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/textViewSmall"
                            android:layout_column="2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/stock_dividend_label_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="@dimen/table_layout_stock_label_width"
                            android:text="@string/stock_dividend_label"
                            style="@style/labelViewSmall"
                            android:layout_column="1" />

                        <TextView
                            android:id="@+id/stock_dividend_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/textViewSmall"
                            android:layout_column="2" />
                    </TableRow>
                </TableLayout>
                <!-- end - display of search stock results -->

                <TextView
                    android:id="@+id/stock_holding_number_shares_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_holding_number_of_shares_label"
                    style="@style/labelView" />

                <EditText
                    android:id="@+id/stock_holding_number_shares_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stock_holding_number_of_shares_hint"
                    style="@style/editViewNoMargin"/>

                <TextView
                    android:id="@+id/stock_holding_price_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_holding_price_bought_label"
                    style="@style/labelView" />

                <EditText
                    android:id="@+id/stock_holding_price_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stock_holding_price_bought_hint"
                    style="@style/editViewNoMargin"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/stock_holding_saving_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/accessibility_save_stock_holding_button_label"
        android:src="@drawable/ic_done_black_24dp"
         />

</android.support.design.widget.CoordinatorLayout>
