<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.doobs.invest.income.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:elevation="@dimen/toolbar_elevation"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        <!--app:contentInsetStart="120dp"-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_holding_add"
            android:id="@+id/stock_holding_add_button"
            android:background="@color/doobsAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/portfolio_name_textview"
            style="@style/labelView"
            android:gravity="center"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingLeft="@dimen/table_layout_padding">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="@string/stock_holding_list_shares_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/table_layout_stock_holding_list_shares_width"
                    style="@style/labelViewSmall"
                    android:layout_column="1" />

                <TextView
                    android:text="@string/stock_holding_list_symbol_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/table_layout_stock_holding_list_symbol_width"
                    style="@style/labelViewSmall"
                    android:layout_column="2" />

                <TextView
                    android:text="@string/stock_holding_list_current_value_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:width="@dimen/table_layout_stock_holding_list_cost_basis_width"
                    style="@style/labelViewSmall"
                    android:layout_column="3" />

                <TextView
                    android:text="@string/stock_holding_list_dividend_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:width="@dimen/table_layout_stock_holding_list_dividend_width"
                    style="@style/labelViewSmall"
                    android:layout_column="4" />

            </TableRow>

        </TableLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scrollbars="vertical"
            android:id="@+id/stock_holding_recyclerview">

        </android.support.v7.widget.RecyclerView>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@color/doobsPrimary"
            android:paddingLeft="@dimen/table_layout_padding">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="@string/stock_holding_list_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/table_layout_stock_holding_list_shares_width"
                    style="@style/labelViewSmall"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/table_layout_stock_holding_list_symbol_width"
                    style="@style/labelViewSmall"
                    android:layout_column="2" />

                <TextView
                    android:id="@+id/stock_holding_list_total_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:width="@dimen/table_layout_stock_holding_list_cost_basis_width"
                    style="@style/labelViewSmall"
                    android:layout_column="3" />

                <TextView
                    android:id="@+id/stock_holding_list_total_dividend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:width="@dimen/table_layout_stock_holding_list_dividend_width"
                    style="@style/labelViewSmall"
                    android:layout_column="4" />

            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/industry_sector_header"
            style="@style/labelView"
            android:gravity="center"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/industry_pie_chart"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_height="200dp" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
